# TimeTrackerQt

./: Associate.cpp  Associate.h  CMakeLists.txt  Company.cpp  Company.h  Day.cpp  Day.h  ManagerAssociate.cpp  ManagerAssociate.h  TimeTracker.cpp  TimeTrackerWidget.cpp  TimeTrackerWidget.h  TimeTrackerWidget.ui  TimedAssociate.cpp  TimedAssociate.h
Configuration/: CMakeLists.txt  EditCompanyWidget.cpp  EditCompanyWidget.h  EditCompanyWidget.ui  TimeTrackerConfiguration.cpp  TimeTrackerConfigurationWidget.cpp  TimeTrackerConfigurationWidget.h  TimeTrackerConfigurationWidget.ui
Tests/: CMakeLists.txt  GenerateExampleDatabase.cpp
